xmppbots - Refactor, kick/ban bug. - Refactor code a bit. - Code fix. If the bot gets kicked or banned it never cleaned up the tracking, and hence ZeroMQ binding, for the chat. We never get notifications for such events. Hence poll the chats we think we're in to determine if we're still in them; Akka makes this easy.